# gl_scratch

./: .clang-format  .gitattributes  CMakeLists.txt  LICENSE
include/glad/: gl.h
scenes/triangle/shaders/: vertex.glsl
shaders/: fragment.glsl
src/: init.cxx  init.hxx  main.cxx
src/graphics/: Shader.cxx  Shader.hxx  ShaderProgram.cxx  VertexArray.cxx  VertexArray.hxx  VertexData.cxx  VertexData.hxx
src/scenes/: Scene.hxx  SceneManager.cxx  SceneManager.hxx  TriangleScene.cxx  TriangleScene.hxx
